src/objects/Bitcoin_Price_Big__b.object
<CustomObject>
    <fields>
        <fullName>Close__c</fullName>
        <label>Close</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High__c</fullName>
        <label>High</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low__c</fullName>
        <label>Low</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <label>Open</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_BTC__c</fullName>
        <label>Volume BTC</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Currency__c</fullName>
        <label>Volume Currency</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weighted_Price__c</fullName>
        <label>Weighted Price</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <indexes>
        <fullName>BitcoinPriceIndex</fullName>
        <fields>
            <name>Time__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>Bitcoin Price Index</label>
    </indexes>
    <label>Bitcoin Price Big</label>
    <pluralLabel>Bitcoin Prices Big</pluralLabel>
</CustomObject>